[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/PalletTown.png" type="Texture" id=2]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/PalletTown-Bottom.png" type="Texture" id=3]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/PalletTown-Top.png" type="Texture" id=4]
[ext_resource path="res://TallGrass.tscn" type="PackedScene" id=5]
[ext_resource path="res://Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ledge.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/Houses/Lights/house-glow.png" type="Texture" id=8]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/PalletTown-overlay.png" type="Texture" id=9]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/PalletTown-lights.png" type="Texture" id=10]
[ext_resource path="res://Assets/Map/Kanto/PalletTown/Houses/Lights/house-glow-2.png" type="Texture" id=11]
[ext_resource path="res://PalletTown.gd" type="Script" id=12]
[ext_resource path="res://TimeOfDay.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=15]
resource_name = "Light-Fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("World_lights:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light2D5:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Light2D6:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Light2D:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 0 ), Color( 1, 0.631373, 0, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Light2D2:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 0 ), Color( 1, 0.631373, 0, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Light2D3:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 0 ), Color( 1, 0.631373, 0, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Light2D4:color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 0 ), Color( 1, 0.631373, 0, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Light2D5:color")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 0 ), Color( 1, 0.631373, 0, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Light2D6:color")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 0 ), Color( 1, 0.631373, 0, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("World_lights:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light2D5:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Light2D6:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Light2D:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Light2D2:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Light2D3:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Light2D4:color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Light2D5:color")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Light2D6:color")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.631373, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 54, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 108 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 36, 11 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 24 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 24, 6 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 12, 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12, 6 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 30, 6 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 24, 6 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 24, 24 )

[node name="PalletTown" type="Node2D"]
script = ExtResource( 12 )

[node name="World" type="Sprite" parent="."]
position = Vector2( 48, 0 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="World"]
visible = false
position = Vector2( 35.454, -17.32 )
texture = ExtResource( 8 )
color = Color( 1, 0.631373, 0, 1 )
energy = 1.4
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="World"]
visible = false
position = Vector2( 61.096, -17.32 )
texture = ExtResource( 8 )
color = Color( 1, 0.631373, 0, 1 )
energy = 1.4
shadow_enabled = true

[node name="Light2D3" type="Light2D" parent="World"]
visible = false
position = Vector2( -34.911, -17.32 )
texture = ExtResource( 8 )
color = Color( 1, 0.631373, 0, 1 )
energy = 1.4
shadow_enabled = true

[node name="Light2D4" type="Light2D" parent="World"]
visible = false
position = Vector2( -61.084, -17.32 )
texture = ExtResource( 8 )
color = Color( 1, 0.631373, 0, 1 )
energy = 1.4
shadow_enabled = true

[node name="Light2D5" type="Light2D" parent="World"]
visible = false
position = Vector2( -47.897, -28.084 )
texture = ExtResource( 11 )
color = Color( 1, 0.631373, 0, 1 )
energy = 1.3
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.223529 )

[node name="Light2D6" type="Light2D" parent="World"]
visible = false
position = Vector2( 48.039, -28.084 )
texture = ExtResource( 11 )
color = Color( 1, 0.631373, 0, 1 )
energy = 1.3
shadow_enabled = true

[node name="World_lights" type="Sprite" parent="World"]
visible = false
position = Vector2( 0, 36 )
z_index = 1
texture = ExtResource( 10 )

[node name="World-Overlay" type="Sprite" parent="World"]
position = Vector2( 0, 36 )
z_index = 3
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="World"]
anims/Light-Fade = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="World-Bottom" type="Sprite" parent="."]
visible = false
position = Vector2( 48, 264 )
texture = ExtResource( 3 )

[node name="World-Top" type="Sprite" parent="."]
visible = false
position = Vector2( 48, -192 )
z_index = -1
texture = ExtResource( 4 )

[node name="Ledges" type="Node2D" parent="."]

[node name="Ledge" parent="Ledges" instance=ExtResource( 7 )]
position = Vector2( 36, -264 )

[node name="Grasses" type="Node2D" parent="."]

[node name="TallGrass" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 48, -156 )

[node name="TallGrass2" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 60, -156 )

[node name="TallGrass3" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 60, -168 )

[node name="TallGrass4" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 48, -168 )

[node name="TallGrass5" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 48, -180 )

[node name="TallGrass6" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 60, -180 )

[node name="TallGrass7" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 60, -192 )

[node name="TallGrass8" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 48, -192 )

[node name="TallGrass9" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 48, -204 )

[node name="TallGrass10" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 60, -204 )

[node name="TallGrass11" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 60, -216 )

[node name="TallGrass12" parent="Grasses" instance=ExtResource( 5 )]
position = Vector2( 48, -216 )

[node name="CanvasVilleCollisions" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( -78, 12 )
z_index = 1
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( -12, 102 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( -18, -84 )
z_index = 1
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 36, -102 )
z_index = 1
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 84, -102 )
z_index = 1
shape = SubResource( 4 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 132, -84 )
z_index = 1
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 174, 36 )
z_index = 1
shape = SubResource( 6 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 132, 145 )
shape = SubResource( 7 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 42, 132 )
shape = SubResource( 8 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 72, 150 )
shape = SubResource( 9 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 24, 90 )
shape = SubResource( 10 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( -24, 6 )
shape = SubResource( 11 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 24, 6 )
shape = SubResource( 11 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 72, 6 )
shape = SubResource( 11 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 120, 6 )
shape = SubResource( 11 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 102, 102 )
shape = SubResource( 12 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 0, 42 )
shape = SubResource( 13 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 0, -24 )
shape = SubResource( 14 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="CanvasVilleCollisions"]
position = Vector2( 96, -24 )
shape = SubResource( 14 )

[node name="Door" parent="." instance=ExtResource( 6 )]
position = Vector2( -12, -24 )
z_index = 1
next_scene_path = "res://Ash-Home-F1.tscn"
spawn_location = Vector2( 24, 84 )
spawn_direction = Vector2( 0, -1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, -24 )

[node name="TimeOfDay" parent="." instance=ExtResource( 13 )]
